2008-06-30  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/common/tagdocs.xsl

	table column widths for attcat

2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/common/verbatim.xsl

	attributes in cells with a rend of wovenoddcol1 are a special choicebc

2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/ChangeLog
	   M /trunk/Stylesheets/common/tei.xsl
	   M /trunk/Stylesheets/common/verbatim.xsl
	   M /trunk/Stylesheets/latex/tei-param.xsl
	   M /trunk/Stylesheets/latex/tei.xsl

	suppressing Schematron namespace; update ChangeLog

2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/latex/core.xsl
	   M /trunk/Stylesheets/latex/tagdocs.xsl

	exclude schematron namespace

2008-06-27  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/odds/odd2lite.xsl

	classSpec not macroSpec

2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/latex/core.xsl
	   M /trunk/Stylesheets/latex/tagdocs.xsl

	exclude schematron namespace

2008-06-27  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/odds/odd2lite.xsl

	classSpec not macroSpec

2008-06-27  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/common/verbatim.xsl

	shut up saxon?

2008-06-27  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/latex/tei-param.xsl
	   M /trunk/Stylesheets/odds/odd2lite.xsl

	lah bal

2008-06-27  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths:
	   M /trunk/Stylesheets/latex/tagdocs.xsl
	   M /trunk/Stylesheets/odds/odd2lite.xsl
	   M /trunk/Stylesheets/odds/teiodds.xsl

	pdf of free-standing ODD

2008-06-24  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
	Changed paths: