@@ -10,6 +10,18 @@
 
 	attributes in cells with a rend of wovenoddcol1 are a special choicebc
 
+2008-06-30  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
+	Changed paths:
+	   M /trunk/Stylesheets/common/tagdocs.xsl
+
+	table column widths for attcat
+
+2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
+	Changed paths:
+	   M /trunk/Stylesheets/common/verbatim.xsl
+
+	attributes in cells with a rend of wovenoddcol1 are a special choicebc
+
 2008-06-28  Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
 	Changed paths:
 	   M /trunk/Stylesheets/ChangeLog
